--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -15,7 +15,7 @@
 					  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
 					    <div class="d-flex w-100 justify-content-between">
 							<div>
-								<img style="height: auto !important;" src="/static/images/avatar.jpg">
+								<img src="https://api.dicebear.com/8.x/adventurer-neutral/png?size=72&seed={{user['name']}}&scale=110&radius=50&backgroundColor=763900,9e5622,ecad80,f2d3b1,d1d4f9,c0aede,b6e3f4,ffd5dc,ffdfbf&backgroundType=solid,gradientLinear"  style="height: auto !important;">
 							</div>
 							<div class="col-md-11">
 								<h5 class="mb-1">{{user['name']}}</h5>
