--- a/templates/shared/layout.html
+++ b/templates/shared/layout.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="/static/style.css" />
 	
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     {% endblock %}
 </head>
 <!-- Put some text on the page -->
@@ -25,10 +25,14 @@
 			  <li class="nav-item">
 			    <a class="nav-link active" href="/">Home</a>
 			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link" href="/books">Books</a>
-			  </li>
 			  {% if g and g.user %}
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Books</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+					<a class="dropdown-item" href="/books"><i class="bi bi-view-list"></i> View all</a>
+					<a class="dropdown-item" href="/books/me"><i class="bi bi-journal-plus"></i> My Book(s)</a>
+					</div>
+				</li>
 				  <li class="nav-item">
 				    <a class="nav-link" href="/user/">Profile</a>
 				  </li>
@@ -36,6 +40,9 @@
 				    <a class="nav-link" href="/signout/">Signout</a>
 				  </li>
 			  {% else %}
+					<li class="nav-item">
+						<a class="nav-link" href="/books">Books</a>
+					</li>
 				  <li class="nav-item">
 				    <a class="nav-link" href="/signin">Signin</a>
 				  </li>
